<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskThis</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to TaskThis!</string>
    <string name="done">Done</string>
    <string name="to_do">To do</string>
    <string name="doing">Doing</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
</resources>
