<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/newTask_editText_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/add_button_main"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/add" />

    <ListView
        android:id="@+id/list_tarefas_novas"
        android:layout_width="274dp"
        android:layout_height="72dp"
        android:layout_weight="0.12"
        android:divider="#FFECECEC"
        android:dividerHeight="2sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp" >

        <CheckBox
            android:id="@+id/todo_checkBox_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_do"
            android:textColor="#FFA500" />

        <CheckBox
            android:id="@+id/done_checkBox_main"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/done"
            android:textColor="#666666" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <ListView
        android:id="@+id/list_pastas"
        android:layout_width="274dp"
        android:layout_height="127dp"
        android:layout_weight="0.18"
        android:divider="#FFECECEC"
        android:dividerHeight="2sp" />

</LinearLayout>